<resources>
    <string name="app_name">collegeApp</string>
    <string name="text">BSc IT &amp; CS</string>
    <string name="text2">Complete 1-tap solution</string>
    <string name="ebooks">E-Books</string>
    <string name="chat_bot">Chat Bot</string>
    <string name="practicals">Practicals</string>
    <string name="notes">Notice</string>
    <string name="attendance">Attendance</string>
    <string name="task">Daily Task</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="explore">EXPLORE</string>
    <string name="themes">Themes</string>
    <string name="about_faculty">About Faculty</string>
    <string name="Logout">Logout</string>
    <string name="helps">HELP &amp; SUPPORT</string>
    <string name="events">Events</string>
    <string name="suggestion">Suggestion</string>
    <string name="header_image">header image</string>
    <string name="todo">card_image</string>
    <string name="help_center">Help Center</string>
    <string name="report">Report a Complaint</string>
    <string name="more">More</string>
    <string name="safety">Safety Tips</string>
    <string name="terms">Terms and Condition</string>
    <string name="privacy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="Notification">Notification</string>
    <string name="download">Download</string>
    <string name="game">Quiz Game</string>
    <string name="BSc_it">BSc IT</string>
    <string name="BSc_cs">BSc CS</string>
    <string name="bsc_text">This Section Provide The Study Material Related to BSC-IT!</string>
    <string name="bsc_text2">This Section Provide The Study Material Related to BSC-CS!</string>
    <string name="sem1">Semester I</string>
    <string name="sem2">Semester II</string>
    <string name="sem3">Semester III</string>
    <string name="sem4">Semester IV</string>
    <string name="sem5">Semester V</string>
    <string name="sem6">Semester VI</string>
    <string name="reference1">Get All Semester I Reference</string>
    <string name="reference2">Get All Semester II Reference</string>
    <string name="reference3">Get All Semester III Reference</string>
    <string name="reference4">Get All Semester IV Reference</string>
    <string name="reference5">Get All Semester V Reference</string>
    <string name="reference6">Get All Semester VI Reference</string>
    <string name="pract">Get All Practical Reference</string>
    <string name="subject">Subjects</string>
    <string name="subject1">Subject</string>
    <string name="chapter">Chapters</string>
    <string name="paper">Papers</string>
    <string name="about_app_name">Collage</string>
    <string name="about_app_name1">Administration</string>
    <string name="copyright">\u00A9 Copyright 2023 Collage Administration</string>
    <string name="report_text">We are here to help you!</string>
    <string name="complaint">Type your complaint here</string>
    <string name="send">Send</string>
    <string name="attachment">Attachment</string>
    <string name="normal_text_report">We will get back to you within 24 hours. Thank you for your patience</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="Safety_tips_text">Welcome to [Your College Administration Application]! This privacy policy outlines how we collect, use, and protect the personal information you provide through our mobile application.
        Your privacy is important to us, and we are committed to safeguarding your information.</string>
    <string name="information">1.Information We Collect </string>
    <string name="information_text">While using our Services, we may ask you to provide us with certain personal
        data or personal information thatcan be used to identify you (“Personal Data”, or “data” or “information” or “Personal Information”).
        We may also collect Personal Data automatically, or from third-party partners or services.  </string>
    <string name="data">The Personal Data we collect includes: </string>
    <string name="stu_info">\u25CF Student Information: </string>
    <string name="stu_info_text">&#160;&#160;&#160;&#160;&#160;&#160; We may collect information provided by students, including but not limited to names, contact details, student IDs, academic records,
        and other relevant information required for administrative purposes. </string>
    <string name="Faculty_and_Staff">\u25CFFaculty and Staff Information: </string>
    <string name="Faculty_and_Staff_text">&#160;&#160;&#160;&#160;&#160;&#160; We may collect information from faculty and staff members, such as names, contact details, professional credentials,
        and other details necessary for the functioning of the college administration. </string>
    <string name="Log_Data">\u25CF Log Data: </string>
    <string name="Log_Data_text">&#160;&#160;&#160;&#160;&#160;&#160; Our application may automatically collect information, including IP addresses, device information,
        and usage statistics for the purpose of improving our services. </string>
    <string name="Device_Information">\u25CF Device Information: </string>
    <string name="Device_Information_text">&#160;&#160;&#160;&#160;&#160;&#160; When you download and use our Services, we automatically collect information on the type of device you use, operating system, resolution, application version, mobile device identifiers
        (such as your device ID or advertising ID), language, time zone and IP address. </string>
    <string name="Usage_Information">\u25CF Usage Information:</string>
    <string name="Usage_Information_text">&#160;&#160;&#160;&#160;&#160;&#160; We collect information automatically about your activity through our Services (Usage Information), such as the date and time you used a service, features
        you have used,and data generated when you use our Services.</string>
    <string name="Location">\u25CF Location:</string>
    <string name="Location_text">&#160;&#160;&#160;&#160;&#160;&#160; When you download and use our Services, we automatically detect your general location, namely country and state through your IP address.
        We may collect, with your consent if applicable, other location information through your IP address, such as the city you are in.</string>
    <string name="Media">\u25CF Media and other files:</string>
    <string name="Media_text">&#160;&#160;&#160;&#160;&#160;&#160; We may ask for access to your camera in case you want to use certain features of our Services.  In case you contact us through our in-app support
        feature and you need to upload any media or files as attachments, we shall ask for access to such files. </string>
    <string name="Your_Information">2.How We Use Your Information</string>
    <string name="Your_Information_text">We may use the collected information for the following purposes:</string>
    <string name="Your_Information_text1">\u25BA Academic Administration: To manage student enrollment, course registration, grading,
        and other academic administration processes.</string>
    <string name="Your_Information_text2">\u25BA Communication: To communicate important information, announcements, and updates related to college activities.</string>
    <string name="Your_Information_text3">\u25BA Faculty and Staff Management: To facilitate human resources processes, including hiring, payroll, and other personnel-related activities.</string>
    <string name="Your_Information_text4">\u25BA Application Improvement: To analyze usage patterns and improve the functionality and user experience of the application.</string>
    <string name="Data_Security">3.Data Security</string>
    <string name="Data_Security_text">The security of Your Personal Data is important to Us,We prioritize the security of your information and employ industry-standard measures to protect it from unauthorized access or disclosure, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure.
        While We strive to use commercially acceptable means to protect Your Personal Data, We cannot guarantee its absolute security.</string>
    <string name="Third_Party">4.Third-Party Services</string>
    <string name="Third_Party_text">We may utilize third-party services for analytics, authentication, and other purposes.
        These services may have their own privacy policies, and we encourage users to review them.</string>
    <string name="RETENTION">5.RETENTION OF PERSONAL DATA</string>
    <string name="RETENTION_text">We will retain your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy. We will retain and use your Personal Data to the extent necessary to comply with our legal obligations (for example, if we are
        required to retain your data to comply with applicable laws), resolve disputes, provide our Services and enforce our legal agreements and policies.</string>
    <string name="RETENTION_text1">We will also retain Personal Data and Usage Information for internal analysis purposes and legitimate business interest to the extent necessary to improve the functionality of our Services,
        for business purposes or when we are legally obligated to retain this data for longer time periods.</string>
    <string name="RETENTION_text2">Your Personal Data collected through our Services will be retained for as long as permitted by applicable law or necessary depending on the respective purpose of collection and shall be deleted when they no longer serve one of the above-mentioned purposes or shall be anonymized and therefore will no longer constitute Personal Data. It is clarified that in no case the retention period should exceed the 5 years from the date of collection. Once we have deleted or anonymized your Personal Data, you will not be able
        to exercise the right to access, the right to erasure, the right to rectification or the right to data portability.</string>
    <string name="Third_Party_Services">6.Third-Party Services</string>
    <string name="Third_Party_Services_text">We may utilize third-party services for analytics, authentication, and other purposes.
        These services may have their own privacy policies, and we encourage users to review them.</string>
    <string name="Rights">7. Students Rights</string>
    <string name="Rights_text">Students have the right to access, correct, or request the deletion of their personal information. Requests can be made through [contact details].</string>
    <string name="PRIVACY_POLICY">8.CHANGES TO THIS PRIVACY POLICY</string>
    <string name="PRIVACY_POLICY_text">This Privacy Policy may change from time to time, and we encourage you to review it periodically. Your continued use of our Services signifies your acceptance of changes to this Privacy Policy.
</string>
    <string name="PRIVACY_POLICY_text2">In some cases, we may notify you of changes to this Privacy Policy with a prominent notice on our Services (for example by way of notification or pop-up), before the changes become effective and update the "effective date" at the top of this Privacy Policy.
</string>
    <string name="Contact_Us">9.Contact Us</string>
    <string name="Contact_Us_text">If you have any questions about this Privacy Policy, You can contact us:</string>
    <string name="Contact_Us_text1">&#160;&#160;&#160;&#160;&#160;&#160;By email: yashmhatre6700@gmail.com</string>
    <string name="Contact_Us_text2">&#160;&#160;&#160;&#160;&#160;&#160;By phone number: +91 88620 88536</string>
    <string name="Safety_Tips">Safety Tips</string>
</resources>