<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/explore">

        <menu>
            <item
                android:id="@+id/about_faculty"
                android:title="@string/about_faculty"
                android:icon="@drawable/baseline_person_search_24" />

            <item
                android:id="@+id/theme"
                android:title="@string/themes"
                android:icon="@drawable/paint" />

            <item
                android:id="@+id/event"
                android:title="@string/events"
                android:icon="@drawable/billboard" />

            <item
                android:id="@+id/suggestion"
                android:title="@string/suggestion"
                android:icon="@drawable/tip" />

        </menu>


    </item>

    <item android:title="@string/helps">

        <menu>

            <item
                android:id="@+id/help_center"
                android:title="@string/help_center"
                android:icon="@drawable/question"/>

            <item
                android:id="@+id/report"
                android:title="@string/report"
                android:icon="@drawable/report"/>

            <item
                android:id="@+id/more"
                android:title="@string/more"
                android:icon="@drawable/baseline_add_circle_outline_24"/>

        </menu>


    </item>


</menu>