<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".logout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                app:lottie_rawRes="@raw/pravacy_policy"
                android:layout_gravity="center"
                app:lottie_loop="true"
                app:lottie_repeatCount="0"
                app:lottie_autoPlay="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Privacy_Policy"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_20sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Safety_tips_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"/>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/line" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/information"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information_text"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:layout_marginTop="@dimen/_10sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stu_info"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stu_info_text"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Faculty_and_Staff"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Faculty_and_Staff_text"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Log_Data"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Log_Data_text"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Device_Information"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Device_Information_text"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Usage_Information"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Usage_Information_text"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Location"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Location_text"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Media"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Media_text"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/Your_Information"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Your_Information_text"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Your_Information_text1"
                android:layout_marginTop="@dimen/_10sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Your_Information_text2"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Your_Information_text3"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Your_Information_text4"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Data_Security"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Data_Security_text"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Third_Party"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Third_Party_text"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RETENTION"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RETENTION_text"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/RETENTION_text1"
                android:textSize="@dimen/_12sdp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RETENTION_text2"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/Third_Party_Services"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Third_Party_Services_text"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/Rights"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rights_text"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/PRIVACY_POLICY"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PRIVACY_POLICY_text"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/Contact_Us"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Contact_Us_text"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text="@string/Contact_Us_text1"
                android:layout_marginTop="@dimen/_5sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text="@string/Contact_Us_text2"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"/>

        </LinearLayout>



    </LinearLayout>

</ScrollView>