<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24" />

    <item
        android:id="@+id/download"
        android:title="@string/download"
        android:icon="@drawable/baseline_cloud_download_24"
        android:iconTint="@color/Light_Black"/>

    <item
        android:id="@+id/notification"
        android:title="@string/Notification"
        android:icon="@drawable/baseline_notifications_none_24"/>

    <item
        android:id="@+id/game"
        android:title="@string/game"
        android:icon="@drawable/baseline_videogame_asset_24"/>

    <item
        android:id="@+id/home3"
        android:title="@string/profile"
        android:icon="@drawable/studentprofile"/>
</menu>