<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BSc_IT_CS"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_290sdp"
        android:layout_height="@dimen/_125sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        android:elevation="@dimen/_5sdp"
        android:id="@+id/bsc_it">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back_img">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="@dimen/_125sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_11sdp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/it" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="@dimen/_66sdp"
                    android:layout_marginBottom="@dimen/_63sdp"
                    android:text="@string/BSc_it"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_22sdp"
                    android:textStyle="bold"
                    tools:ignore="VisualLintOverlap,TextSizeCheck" />

                <TextView
                    android:layout_width="@dimen/_105sdp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:layout_marginBottom="@dimen/_22sdp"
                    android:text="@string/bsc_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold"
                    tools:ignore="VisualLintOverlap,TextSizeCheck" />


            </RelativeLayout>

        </LinearLayout>




    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_290sdp"
        android:layout_height="@dimen/_125sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        android:elevation="@dimen/_5sdp"
        android:id="@+id/bsc_cs"
        android:layout_margin="@dimen/_15sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back_img">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="@dimen/_125sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_11sdp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/cs" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="@dimen/_58sdp"
                    android:layout_marginBottom="@dimen/_70sdp"
                    android:text="@string/BSc_cs"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_22sdp"
                    android:textStyle="bold"
                    tools:ignore="VisualLintOverlap,TextSizeCheck" />

                <TextView
                    android:layout_width="@dimen/_105sdp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:text="@string/bsc_text2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold"
                    tools:ignore="VisualLintOverlap,TextSizeCheck" />


            </RelativeLayout>

        </LinearLayout>




    </androidx.cardview.widget.CardView>



</LinearLayout>